--- a/angular.json
+++ b/angular.json
@@ -22,11 +22,11 @@
       "prefix": "app",
       "architect": {
         "build": {
-          "builder": "@angular-devkit/build-angular:browser-esbuild",
+          "builder": "@angular-devkit/build-angular:application",
           "options": {
             "outputPath": "dist/ng-watch-your-language-demo",
             "index": "src/index.html",
-            "main": "src/main.ts",
+            "browser": "src/main.ts",
             "polyfills": [
               "zone.js"
             ],
@@ -73,10 +73,10 @@
           "builder": "@angular-devkit/build-angular:dev-server",
           "configurations": {
             "production": {
-              "browserTarget": "ng-watch-your-language-demo:build:production"
+              "buildTarget": "ng-watch-your-language-demo:build:production"
             },
             "development": {
-              "browserTarget": "ng-watch-your-language-demo:build:development"
+              "buildTarget": "ng-watch-your-language-demo:build:development"
             }
           },
           "defaultConfiguration": "development"
@@ -84,7 +84,7 @@
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
           "options": {
-            "browserTarget": "ng-watch-your-language-demo:build"
+            "buildTarget": "ng-watch-your-language-demo:build"
           }
         },
         "test": {
