chore: upgrade to angular 17

--- a/angular.json
+++ b/angular.json
@@ -59,12 +59,9 @@
               "baseHref": "https://railsstudent.github.io/ng-watch-your-language-demo/"
             },
             "development": {
-              "buildOptimizer": false,
               "optimization": false,
-              "vendorChunk": true,
               "extractLicenses": false,
-              "sourceMap": true,
-              "namedChunks": true
+              "sourceMap": true
             }
           },
           "defaultConfiguration": "production"
